After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719574 - Calibration on other monitors than (x,y=0,0) come out wrong
Calibration on other monitors than (x,y=0,0) come out wrong
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Wacom
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Carlos Garnacho
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-29 18:35 UTC by Carlos Garnacho
Modified: 2013-12-16 11:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wacom: Don't use monitor geometry X/Y when calculating calibration (2.12 KB, patch)
2013-11-29 18:37 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Garnacho 2013-11-29 18:35:52 UTC
If a wacom device is calibrated while the monitor it's attached to isn't at 0,0 coordinates in the screen, the calibration comes out wrong, turns out the calibration gui is using monitor geometry x/y coordinates to calculate the device calibration, which is relative to device coordinates, and hence non dependent on the monitor position in the layout. I'm attaching a patch to fix this.
Comment 1 Carlos Garnacho 2013-11-29 18:37:11 UTC
Created attachment 263154 [details] [review]
wacom: Don't use monitor geometry X/Y when calculating calibration

Calibration must be performed based on the device w/h ranges and the
screen size, so in which coordinates the monitor is virtually mapped
matters little on device coordinates. This fixes calibration of devices
attached to a monitor elsewhere than (0,0) in the screen.
Comment 2 Bastien Nocera 2013-12-13 17:05:58 UTC
Review of attachment 263154 [details] [review]:

If you've tested this, then the code looks fine. I don't really fancy trying to reverse engineer it ;)
Comment 3 Carlos Garnacho 2013-12-16 11:39:35 UTC
It's been tested quite extensively with 2 on-display tablets :), Too bad this laptop only handles 2 simultaneous outputs out of LVDS/VGA/DisplayPort. That code could indeed do with some sanitizing...
Comment 4 Carlos Garnacho 2013-12-16 11:41:36 UTC
Attachment 263154 [details] pushed as e2464ee - wacom: Don't use monitor geometry X/Y when calculating calibration