wacom: Don't use monitor geometry X/Y when calculating calibration

Calibration must be performed based on the device w/h ranges and the
screen size, so in which coordinates the monitor is virtually mapped
matters little on device coordinates. This fixes calibration of devices
attached to a monitor elsewhere than (0,0) in the screen.

https://bugzilla.gnome.org/show_bug.cgi?id=719574